@@ -1,5 +1,10 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(as_dtm,character)
+S3method(as_dtm,tbl_df)
+S3method(as_dtm,term_count)
+S3method(as_tdm,tbl_df)
+S3method(as_tdm,term_count)
 S3method(filter_documents,DocumentTermMatrix)
 S3method(filter_documents,TermDocumentMatrix)
 S3method(filter_tf_idf,DocumentTermMatrix)
@@ -10,6 +15,8 @@ S3method(remove_stopwords,DocumentTermMatrix)
 S3method(remove_stopwords,TermDocumentMatrix)
 S3method(select_documents,DocumentTermMatrix)
 S3method(select_documents,TermDocumentMatrix)
+export(as_dtm)
+export(as_tdm)
 export(filter_documents)
 export(filter_tf_idf)
 export(filter_words)
